@@ -1,3 +1,14 @@
+2010-04-06 Philipp Klaus Krause <pkk AT spth.de>
+	* src/z80/gen.c,
+	  src/z80/peeph-z80.def
+	  Minor improvements, workaround for bug #2970351.
+	* device/lib/z80/divunsigned.s,
+	  device/lib/z80/Makefile.in,
+	  device/lib/z80/div.s,
+	  device/lib/z80/divmixed.s
+	  device/lib/z80/divsigned.s:
+	  Division library reorganization.
+
 2010-04-05 Borut Razem <borut.razem AT siol.net>
 
 	* sdcc/sim/ucsim/gui.src/Makefile.in:
